[package]
name = "fetch_unroll"
version = "0.2.1"
description = "Simple utilities for fetching and unrolling .tar.gz archives"
categories = ["development-tools::build-utils", "web-programming::http-client"]
keywords = ["fetch", "unroll", "http", "tar", "gzip"]
authors = ["K. <kayo@illumium.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/katyo/fetch_unroll"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "katyo/fetch_unroll" }

[dependencies.ureq]
version = "0.11"

[dependencies.libflate]
version = "0.1"

[dependencies.tar]
version = "0.4"
